# UnityTest

Assets/AddressableAssetsData/: AddressableAssetSettings.asset
Assets/AddressableAssetsData/AssetGroups/Schemas/: Built In Data_PlayerDataGroupSchema.asset  Default Local Group_ContentUpdateGroupSchema.asset
Assets/Prefabs/: Cube1.prefab  Cube2.prefab
Assets/Prefabs/Addressables/: Sphere (1).prefab  Sphere (5).prefab
Assets/Scenes/: Concatenate.unity  Texture.unity
Assets/Scripts/1.2Plugin/: TestoScript.cs
Assets/StreamingAssets/: StreamingAssets.manifest  cube1bundle  cube2bundle
C++UnityPlugin/: CMakeLists.txt  library.cpp  library.h
My project/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
My project/Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
My project/Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  Default Local Group.asset
My project/Assets/Editor/: NewAnalyzeRule.cs
My project/Assets/Prefabs/Addressables/: Cube.prefab  Sphere (2).prefab  Sphere (3).prefab  Sphere (4).prefab  Sphere (6).prefab  Sphere.prefab
My project/Assets/Scenes/: 1.1Addressables.unity  1.4AssetBundleScene.unity
My project/Assets/Scripts/1.3JobSystem/: RedTexture.cs
My project/Assets/Scripts/1.4AssetsBundles/: ThingToLoadBundle.cs
My project/Assets/StreamingAssets/: StreamingAssets  cube1bundle.manifest  cube2bundle.manifest
My project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+1 files in other folders)
